--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -23,27 +23,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/arise/auto_debug_capstone/ocr/src/data.py:144: DtypeWarning: Columns (31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  chatBot_df = pd.read_csv('../data/raw/Ko_persona_train_corrected.csv').sample(frac=1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = data.getData()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"../data/processed/data.csv\")"
+    "df = data.getData()"
    ]
   },
   {
@@ -51,7 +33,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.mk_processedData(df)"
+   ]
   }
  ],
  "metadata": {
