--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -7,7 +7,12 @@
    "outputs": [],
    "source": [
     "# 0 := delete \\n\n",
-    "# 1 := leave as it is"
+    "# 1 := leave as it is\n",
+    "\n",
+    "# model = gensim.models.Word2Vec.load('../../../pretrained_model/kor/ko.bin')\n",
+    "\n",
+    "# from hangul_utils import split_syllables, join_jamos\n",
+    "# import gensim"
    ]
   },
   {
@@ -16,7 +21,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import data"
+    "import torch\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "from datetime import datetime\n",
+    "\n",
+    "import data\n",
+    "import bpe\n",
+    "import utils\n",
+    "import pretrained_model as pm\n",
+    "import data_loader as dl\n",
+    "import trainer\n",
+    "import initializer as init"
    ]
   },
   {
@@ -25,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = data.getData()"
+    "# df = data.getInitData()"
    ]
   },
   {
@@ -34,8 +51,317 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.mk_processedData(df)"
+    "# data.mk_processedData(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first_np, second_np, label_np = utils.process(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_np, second_np, label_np  = data.getData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_np, second_np = utils.process_splitted(first_np, second_np)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_ls, second_ls, ch2idx, max_len = utils.tokenize(first_np, second_np)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first2idx_np, second2idx_np = utils.encode(first_ls, second_ls, ch2idx, max_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 27 / 132 pretrained vectors found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pretrained_word2vec = pm.load_pretrained_model(ch2idx)\n",
+    "pretrained_word2vec = torch.tensor(pretrained_word2vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_first, test_first, train_second, test_second, train_labels, test_labels = train_test_split(\n",
+    "    first2idx_np, second2idx_np, label_np, test_size = 0.1, random_state = 43\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_first, val_first, train_second, val_second, train_labels, val_labels = train_test_split(\n",
+    "    train_first, train_second, train_labels, test_size = 0.1, random_state = 43\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataloader, val_dataloader, test_dataloader = dl.data_loader(train_first,\n",
+    "                                                                   train_second,\n",
+    "                                                                   val_first,\n",
+    "                                                                   val_second,\n",
+    "                                                                   test_first,\n",
+    "                                                                   test_second,\n",
+    "                                                                   train_labels,\n",
+    "                                                                   val_labels,\n",
+    "                                                                   test_labels,\n",
+    "                                                                   batch_size=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PyTorch TensorBoard support\n",
+    "# timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "# writer = SummaryWriter('ocr/tests')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1 GPU(s) available.\n",
+      "Device name: NVIDIA GeForce RTX 3070\n"
+     ]
+    }
+   ],
+   "source": [
+    "if torch.cuda.is_available():       \n",
+    "    device = torch.device(\"cuda\")\n",
+    "    print(f'There are {torch.cuda.device_count()} GPU(s) available.')\n",
+    "    print('Device name:', torch.cuda.get_device_name(0))\n",
+    "\n",
+    "else:\n",
+    "    print('No GPU available, using the CPU instead.')\n",
+    "    device = torch.device(\"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.set_seed(42)\n",
+    "\n",
+    "model, optimizer, loss_fn = init.initialize_model(\n",
+    "    vocab_size=len(ch2idx),\n",
+    "    embed_dim=200,\n",
+    "    hidden_size=100,\n",
+    "    num_classes=2,\n",
+    "    rnn_layers=3,\n",
+    "    dropout=0.2,\n",
+    "    learning_rate=0.001,\n",
+    "    model_name=\"RNN\",\n",
+    "    optim_name=\"Adam\",\n",
+    "    loss_fn_name=\"CEL\",\n",
+    "    pretrained_model=pretrained_word2vec,\n",
+    "    freeze_embedding=False,\n",
+    "    device=device,\n",
+    ")\n",
+    "\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import ocr_model as om\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doing with pretrained model!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = om.OCR(\n",
+    "            len(ch2idx),                                    # input size = vocab size\n",
+    "            200,                                            # vector dimension size\n",
+    "            100,                                            # hidden size\n",
+    "            2,                                              # number of class\n",
+    "            2,                                              # lstm layer\n",
+    "            0.0,                                            # drouput value\n",
+    "            pretrained_embedding=pretrained_word2vec,       # pretrained model (optional)\n",
+    "            freeze_embedding=False,                         # false; updates tensor\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OCR(\n",
+       "  (emb): Embedding(132, 200)\n",
+       "  (lstm1): RNN(\n",
+       "    (rnn): LSTM(200, 100, num_layers=2, batch_first=True, bidirectional=True)\n",
+       "  )\n",
+       "  (lstm2): RNN(\n",
+       "    (rnn): LSTM(200, 100, num_layers=2, batch_first=True, bidirectional=True)\n",
+       "  )\n",
+       "  (fc1): Linear(in_features=400, out_features=2, bias=True)\n",
+       "  (dropout): Dropout(p=0.0, inplace=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = optim.Adam(model.parameters(), lr = 0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6963645219802856\n",
+      "\n",
+      "48.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for step, batch in enumerate(train_dataloader):\n",
+    "    firsts, seconds, labels = tuple(t.to(device) for t in batch)\n",
+    "\n",
+    "    model.zero_grad()\n",
+    "\n",
+    "    logits = model(firsts, seconds)\n",
+    "\n",
+    "    loss = loss_fn(logits, labels)\n",
+    "\n",
+    "    preds = torch.argmax(logits, dim=1).flatten()\n",
+    "\n",
+    "    accuracy = (preds == labels).cpu().numpy().mean() * 100\n",
+    "\n",
+    "    print(loss.item())\n",
+    "    print()\n",
+    "    print(accuracy)\n",
+    "\n",
+    "    # Perform a backward pass to calculate gradients\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # Update parameters\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
