--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -163,9 +163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PyTorch TensorBoard support\n",
-    "# timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "# writer = SummaryWriter('ocr/tests')"
+    "PyTorch TensorBoard support\n",
+    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "writer = SummaryWriter('ocr/tests')"
    ]
   },
   {
@@ -226,7 +226,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.train()"
+    "trainer.train(\n",
+    "    epochs=20,\n",
+    "    title='test1',\n",
+    "    writer=writer,\n",
+    "    train_dataloader=train_dataloader,\n",
+    "    val_dataloader=val_dataloader,\n",
+    "    device=device,\n",
+    "    model=model,\n",
+    "    optimizer=optimizer,\n",
+    "    loss_fn=loss_fn\n",
+    ")"
    ]
   },
   {
@@ -366,7 +376,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -380,12 +390,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "348b9cd948ce87438be2e622031b2ecfa29bc2d3ecc0fd03127b9a24b30227df"
+    "hash": "397704579725e15f5c7cb49fe5f0341eb7531c82d19f2c29d197e8b64ab5776b"
    }
   }
  },
