--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -42,7 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = data.getInitData()"
+    "# df = data.getInitData()\n",
+    "# data.mk_initData(df)\n",
+    "# first_np, second_np, label_np = utils.process(df)"
    ]
   },
   {
@@ -51,57 +53,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data.mk_processedData(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# first_np, second_np, label_np = utils.process(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first_np, second_np, label_np  = data.getData()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first_np, second_np = utils.process_splitted(first_np, second_np)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first_ls, second_ls, ch2idx, max_len = utils.tokenize(first_np, second_np)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "first_np, second_np, label_np  = data.getData()\n",
+    "first_np, second_np = utils.process_splitted(first_np, second_np)\n",
+    "first_ls, second_ls, ch2idx, max_len = utils.tokenize(first_np, second_np)\n",
     "first2idx_np, second2idx_np = utils.encode(first_ls, second_ls, ch2idx, max_len)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,21 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_first, test_first, train_second, test_second, train_labels, test_labels = train_test_split(\n",
     "    first2idx_np, second2idx_np, label_np, test_size = 0.1, random_state = 43\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "train_first, val_first, train_second, val_second, train_labels, val_labels = train_test_split(\n",
     "    train_first, train_second, train_labels, test_size = 0.1, random_state = 43\n",
     ")"
@@ -141,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,18 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PyTorch TensorBoard support\n",
-    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "writer = SummaryWriter('ocr/tests')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -183,6 +125,10 @@
     }
    ],
    "source": [
+    "# PyTorch TensorBoard support\n",
+    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "writer = SummaryWriter('ocr/tests')\n",
+    "\n",
     "if torch.cuda.is_available():       \n",
     "    device = torch.device(\"cuda\")\n",
     "    print(f'There are {torch.cuda.device_count()} GPU(s) available.')\n",
@@ -195,9 +141,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doing with pretrained model!!!\n",
+      "OCR(\n",
+      "  (emb): Embedding(132, 200)\n",
+      "  (lstm1): RNN(\n",
+      "    (rnn): LSTM(200, 100, batch_first=True, bidirectional=True)\n",
+      "  )\n",
+      "  (lstm2): RNN(\n",
+      "    (rnn): LSTM(200, 100, batch_first=True, bidirectional=True)\n",
+      "  )\n",
+      "  (fc1): Linear(in_features=400, out_features=300, bias=True)\n",
+      "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
+      "  (dropout): Dropout(p=0.0, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "trainer.set_seed(42)\n",
     "\n",
@@ -206,8 +172,8 @@
     "    embed_dim=200,\n",
     "    hidden_size=100,\n",
     "    num_classes=2,\n",
-    "    rnn_layers=3,\n",
-    "    dropout=0.2,\n",
+    "    rnn_layers=1,\n",
+    "    dropout=0.0,\n",
     "    learning_rate=0.001,\n",
     "    model_name=\"RNN\",\n",
     "    optim_name=\"Adam\",\n",
@@ -222,9 +188,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start training...\n",
+      "\n",
+      " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
+      "--------------------------------------------------------------------------------\n",
+      "   1    |   0.693250   | 50.716049  | 0.693138 | 50.26  | 71.53 \n",
+      "   2    |   0.693257   | 50.057613  | 0.693178 | 50.26  | 71.41 \n",
+      "   3    |   0.693262   | 49.884774  | 0.693138 | 50.26  | 71.86 \n",
+      "   4    |   0.693214   | 49.806584  | 0.693175 | 49.74  | 72.44 \n",
+      "   5    |   0.693260   | 49.353909  | 0.693147 | 50.26  | 71.94 \n",
+      "   6    |   0.693201   | 49.152263  | 0.693178 | 49.74  | 70.55 \n",
+      "   7    |   0.693150   | 49.753086  | 0.693134 | 50.26  | 71.75 \n",
+      "   8    |   0.693169   | 49.769547  | 0.693150 | 49.74  | 71.70 \n",
+      "   9    |   0.693138   | 49.995885  | 0.693151 | 50.26  | 71.99 \n",
+      "  10    |   0.693176   | 49.987654  | 0.693185 | 49.74  | 71.89 \n",
+      "  11    |   0.693162   | 49.995885  | 0.693183 | 49.74  | 71.67 \n",
+      "  12    |   0.693143   | 50.176955  | 0.693298 | 49.74  | 71.23 \n",
+      "  13    |   0.693169   | 50.098765  | 0.693139 | 50.26  | 71.74 \n",
+      "  14    |   0.693179   | 49.893004  | 0.693187 | 49.74  | 72.51 \n",
+      "  15    |   0.693170   | 50.004115  | 0.693181 | 49.74  | 72.20 \n",
+      "  16    |   0.693176   | 49.958848  | 0.693135 | 50.26  | 72.18 \n",
+      "  17    |   0.693165   | 49.818930  | 0.693158 | 50.26  | 71.09 \n",
+      "  18    |   0.693155   | 50.246914  | 0.693203 | 49.74  | 71.44 \n",
+      "  19    |   0.693184   | 49.493827  | 0.693213 | 49.74  | 71.26 \n",
+      "  20    |   0.693173   | 49.403292  | 0.693183 | 49.74  | 71.72 \n",
+      "\n",
+      "\n",
+      "Training complete! Best accuracy: 50.26%.\n"
+     ]
+    }
+   ],
    "source": [
     "trainer.train(\n",
     "    epochs=20,\n",
@@ -237,133 +237,6 @@
     "    optimizer=optimizer,\n",
     "    loss_fn=loss_fn\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn as nn\n",
-    "import ocr_model as om\n",
-    "import torch.optim as optim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "doing with pretrained model!!!\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = om.OCR(\n",
-    "            len(ch2idx),                                    # input size = vocab size\n",
-    "            200,                                            # vector dimension size\n",
-    "            100,                                            # hidden size\n",
-    "            2,                                              # number of class\n",
-    "            2,                                              # lstm layer\n",
-    "            0.0,                                            # drouput value\n",
-    "            pretrained_embedding=pretrained_word2vec,       # pretrained model (optional)\n",
-    "            freeze_embedding=False,                         # false; updates tensor\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OCR(\n",
-       "  (emb): Embedding(132, 200)\n",
-       "  (lstm1): RNN(\n",
-       "    (rnn): LSTM(200, 100, num_layers=2, batch_first=True, bidirectional=True)\n",
-       "  )\n",
-       "  (lstm2): RNN(\n",
-       "    (rnn): LSTM(200, 100, num_layers=2, batch_first=True, bidirectional=True)\n",
-       "  )\n",
-       "  (fc1): Linear(in_features=400, out_features=2, bias=True)\n",
-       "  (dropout): Dropout(p=0.0, inplace=False)\n",
-       ")"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer = optim.Adam(model.parameters(), lr = 0.001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss_fn = nn.CrossEntropyLoss()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6963645219802856\n",
-      "\n",
-      "48.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for step, batch in enumerate(train_dataloader):\n",
-    "    firsts, seconds, labels = tuple(t.to(device) for t in batch)\n",
-    "\n",
-    "    model.zero_grad()\n",
-    "\n",
-    "    logits = model(firsts, seconds)\n",
-    "\n",
-    "    loss = loss_fn(logits, labels)\n",
-    "\n",
-    "    preds = torch.argmax(logits, dim=1).flatten()\n",
-    "\n",
-    "    accuracy = (preds == labels).cpu().numpy().mean() * 100\n",
-    "\n",
-    "    print(loss.item())\n",
-    "    print()\n",
-    "    print(accuracy)\n",
-    "\n",
-    "    # Perform a backward pass to calculate gradients\n",
-    "    loss.backward()\n",
-    "\n",
-    "    # Update parameters\n",
-    "    optimizer.step()\n",
-    "\n",
-    "    break"
    ]
   },
   {
