--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -23,6 +23,8 @@
    "source": [
     "import torch\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics\n",
+    "import pandas as pd\n",
     "\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from datetime import datetime\n",
@@ -33,7 +35,8 @@
     "import pretrained_model as pm\n",
     "import data_loader as dl\n",
     "import trainer\n",
-    "import initializer as init"
+    "import initializer as init\n",
+    "import tester"
    ]
   },
   {
@@ -157,8 +160,7 @@
       "  (lstm2): RNN(\n",
       "    (rnn): LSTM(200, 100, batch_first=True, bidirectional=True)\n",
       "  )\n",
-      "  (fc1): Linear(in_features=400, out_features=300, bias=True)\n",
-      "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
+      "  (fc1): Linear(in_features=400, out_features=2, bias=True)\n",
       "  (dropout): Dropout(p=0.0, inplace=False)\n",
       ")\n"
      ]
@@ -199,36 +201,36 @@
       "\n",
       " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
       "--------------------------------------------------------------------------------\n",
-      "   1    |   0.693250   | 50.716049  | 0.693138 | 50.26  | 71.53 \n",
-      "   2    |   0.693257   | 50.057613  | 0.693178 | 50.26  | 71.41 \n",
-      "   3    |   0.693262   | 49.884774  | 0.693138 | 50.26  | 71.86 \n",
-      "   4    |   0.693214   | 49.806584  | 0.693175 | 49.74  | 72.44 \n",
-      "   5    |   0.693260   | 49.353909  | 0.693147 | 50.26  | 71.94 \n",
-      "   6    |   0.693201   | 49.152263  | 0.693178 | 49.74  | 70.55 \n",
-      "   7    |   0.693150   | 49.753086  | 0.693134 | 50.26  | 71.75 \n",
-      "   8    |   0.693169   | 49.769547  | 0.693150 | 49.74  | 71.70 \n",
-      "   9    |   0.693138   | 49.995885  | 0.693151 | 50.26  | 71.99 \n",
-      "  10    |   0.693176   | 49.987654  | 0.693185 | 49.74  | 71.89 \n",
-      "  11    |   0.693162   | 49.995885  | 0.693183 | 49.74  | 71.67 \n",
-      "  12    |   0.693143   | 50.176955  | 0.693298 | 49.74  | 71.23 \n",
-      "  13    |   0.693169   | 50.098765  | 0.693139 | 50.26  | 71.74 \n",
-      "  14    |   0.693179   | 49.893004  | 0.693187 | 49.74  | 72.51 \n",
-      "  15    |   0.693170   | 50.004115  | 0.693181 | 49.74  | 72.20 \n",
-      "  16    |   0.693176   | 49.958848  | 0.693135 | 50.26  | 72.18 \n",
-      "  17    |   0.693165   | 49.818930  | 0.693158 | 50.26  | 71.09 \n",
-      "  18    |   0.693155   | 50.246914  | 0.693203 | 49.74  | 71.44 \n",
-      "  19    |   0.693184   | 49.493827  | 0.693213 | 49.74  | 71.26 \n",
-      "  20    |   0.693173   | 49.403292  | 0.693183 | 49.74  | 71.72 \n",
+      "   1    |   0.239527   | 90.979424  | 0.187160 | 93.33  | 70.99 \n",
+      "   2    |   0.152824   | 94.358025  | 0.150207 | 94.81  | 70.17 \n",
+      "   3    |   0.131749   | 95.139918  | 0.145590 | 94.37  | 70.48 \n",
+      "   4    |   0.119353   | 95.674897  | 0.138006 | 94.89  | 71.33 \n",
+      "   5    |   0.109190   | 95.917695  | 0.137656 | 95.04  | 71.48 \n",
+      "   6    |   0.103007   | 96.111111  | 0.125594 | 95.63  | 71.63 \n",
+      "   7    |   0.096227   | 96.399177  | 0.132787 | 95.00  | 71.85 \n",
+      "   8    |   0.089348   | 96.596708  | 0.132698 | 94.78  | 71.56 \n",
+      "   9    |   0.082214   | 97.004115  | 0.125319 | 95.26  | 71.93 \n",
+      "  10    |   0.076732   | 97.230453  | 0.126546 | 95.19  | 71.92 \n",
+      "  11    |   0.070428   | 97.395062  | 0.143881 | 94.78  | 71.06 \n",
+      "  12    |   0.066333   | 97.674897  | 0.129552 | 95.19  | 71.02 \n",
+      "  13    |   0.059489   | 97.851852  | 0.138091 | 95.19  | 70.70 \n",
+      "  14    |   0.054660   | 98.078189  | 0.142680 | 94.93  | 70.26 \n",
+      "  15    |   0.047386   | 98.263374  | 0.145770 | 95.59  | 70.08 \n",
+      "  16    |   0.041867   | 98.530864  | 0.155224 | 95.00  | 70.74 \n",
+      "  17    |   0.040618   | 98.654321  | 0.161561 | 94.85  | 71.27 \n",
+      "  18    |   0.033838   | 98.860082  | 0.168415 | 94.89  | 71.67 \n",
+      "  19    |   0.027869   | 99.086420  | 0.173696 | 95.26  | 70.95 \n",
+      "  20    |   0.027949   | 99.094650  | 0.177323 | 94.67  | 71.21 \n",
       "\n",
       "\n",
-      "Training complete! Best accuracy: 50.26%.\n"
+      "Training complete! Best accuracy: 95.63%.\n"
      ]
     }
    ],
    "source": [
     "trainer.train(\n",
     "    epochs=20,\n",
-    "    title='test1',\n",
+    "    title='test3',\n",
     "    writer=writer,\n",
     "    train_dataloader=train_dataloader,\n",
     "    val_dataloader=val_dataloader,\n",
@@ -237,6 +239,37 @@
     "    optimizer=optimizer,\n",
     "    loss_fn=loss_fn\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tot_pred, tot_label = tester.test(test_dataloader=test_dataloader,\n",
+    "                                  device=device, \n",
+    "                                  model=model)\n",
+    "\n",
+    "results = metrics.classification_report(tot_label.cpu(), tot_pred.cpu(), output_dict=True)\n",
+    "results_df = pd.DataFrame.from_dict(results).transpose()\n",
+    "results_df.to_excel('../result/test3.xlsx', sheet_name='sheet1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Again, grab a single mini-batch of images\n",
+    "dataiter = iter(train_dataloader)\n",
+    "first, second, labels = dataiter.next()\n",
+    "\n",
+    "# add_graph() will trace the sample input through your model,\n",
+    "# and render it as a graph.\n",
+    "writer.add_graph(model.cpu(), (first, second))\n",
+    "writer.flush()"
    ]
   },
   {
