--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -23,7 +23,6 @@
    "source": [
     "import torch\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import metrics\n",
     "import pandas as pd\n",
     "\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
@@ -36,7 +35,8 @@
     "import data_loader as dl\n",
     "import trainer\n",
     "import initializer as init\n",
-    "import tester"
+    "import tester\n",
+    "import model_util as mu"
    ]
   },
   {
@@ -146,46 +146,29 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "doing with pretrained model!!!\n",
-      "OCR(\n",
-      "  (emb): Embedding(132, 200)\n",
-      "  (lstm1): RNN(\n",
-      "    (rnn): LSTM(200, 100, batch_first=True, bidirectional=True)\n",
-      "  )\n",
-      "  (lstm2): RNN(\n",
-      "    (rnn): LSTM(200, 100, batch_first=True, bidirectional=True)\n",
-      "  )\n",
-      "  (fc1): Linear(in_features=400, out_features=2, bias=True)\n",
-      "  (dropout): Dropout(p=0.0, inplace=False)\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "trainer.set_seed(42)\n",
+    "# ====================\n",
+    "# set parameters here\n",
+    "# ====================\n",
     "\n",
-    "model, optimizer, loss_fn = init.initialize_model(\n",
-    "    vocab_size=len(ch2idx),\n",
-    "    embed_dim=200,\n",
-    "    hidden_size=100,\n",
-    "    num_classes=2,\n",
-    "    rnn_layers=1,\n",
-    "    dropout=0.0,\n",
-    "    learning_rate=0.001,\n",
-    "    model_name=\"RNN\",\n",
-    "    optim_name=\"Adam\",\n",
-    "    loss_fn_name=\"CEL\",\n",
-    "    pretrained_model=pretrained_word2vec,\n",
-    "    freeze_embedding=False,\n",
-    "    device=device,\n",
-    ")\n",
+    "title = 'test5'\n",
+    "epochs = 20\n",
     "\n",
-    "print(model)"
+    "vocab_size=len(ch2idx)\n",
+    "embed_dim = 200\n",
+    "hidden_size = 50\n",
+    "num_classes = 2\n",
+    "rnn_layers = 1\n",
+    "dropout = 0.0\n",
+    "learning_rate = 0.001\n",
+    "\n",
+    "model_name=\"RNN\"\n",
+    "optim_name=\"Adam\"\n",
+    "loss_fn_name=\"CEL\"\n",
+    "\n",
+    "pretrained_model=pretrained_word2vec\n",
+    "freeze_embedding=False,"
    ]
   },
   {
@@ -197,40 +180,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "doing with pretrained model!!!\n",
+      "OCR(\n",
+      "  (emb): Embedding(132, 200)\n",
+      "  (lstm1): RNN(\n",
+      "    (rnn): LSTM(200, 50, batch_first=True, bidirectional=True)\n",
+      "  )\n",
+      "  (lstm2): RNN(\n",
+      "    (rnn): LSTM(200, 50, batch_first=True, bidirectional=True)\n",
+      "  )\n",
+      "  (fc1): Linear(in_features=200, out_features=300, bias=True)\n",
+      "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
+      "  (dp1): Dropout(p=0.0, inplace=False)\n",
+      "  (dp2): Dropout(p=0.0, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "trainer.set_seed(42)\n",
+    "\n",
+    "model, optimizer, loss_fn = init.initialize_model(\n",
+    "    vocab_size=vocab_size,\n",
+    "    embed_dim=embed_dim,\n",
+    "    hidden_size=hidden_size,\n",
+    "    num_classes=num_classes,\n",
+    "    rnn_layers=rnn_layers,\n",
+    "    dropout=dropout,\n",
+    "    learning_rate=learning_rate,\n",
+    "    model_name=model_name,\n",
+    "    optim_name=optim_name,\n",
+    "    loss_fn_name=loss_fn_name,\n",
+    "    pretrained_model=pretrained_model,\n",
+    "    freeze_embedding=freeze_embedding,\n",
+    "    device=device,\n",
+    ")\n",
+    "\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Start training...\n",
       "\n",
       " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
       "--------------------------------------------------------------------------------\n",
-      "   1    |   0.239527   | 90.979424  | 0.187160 | 93.33  | 70.99 \n",
-      "   2    |   0.152824   | 94.358025  | 0.150207 | 94.81  | 70.17 \n",
-      "   3    |   0.131749   | 95.139918  | 0.145590 | 94.37  | 70.48 \n",
-      "   4    |   0.119353   | 95.674897  | 0.138006 | 94.89  | 71.33 \n",
-      "   5    |   0.109190   | 95.917695  | 0.137656 | 95.04  | 71.48 \n",
-      "   6    |   0.103007   | 96.111111  | 0.125594 | 95.63  | 71.63 \n",
-      "   7    |   0.096227   | 96.399177  | 0.132787 | 95.00  | 71.85 \n",
-      "   8    |   0.089348   | 96.596708  | 0.132698 | 94.78  | 71.56 \n",
-      "   9    |   0.082214   | 97.004115  | 0.125319 | 95.26  | 71.93 \n",
-      "  10    |   0.076732   | 97.230453  | 0.126546 | 95.19  | 71.92 \n",
-      "  11    |   0.070428   | 97.395062  | 0.143881 | 94.78  | 71.06 \n",
-      "  12    |   0.066333   | 97.674897  | 0.129552 | 95.19  | 71.02 \n",
-      "  13    |   0.059489   | 97.851852  | 0.138091 | 95.19  | 70.70 \n",
-      "  14    |   0.054660   | 98.078189  | 0.142680 | 94.93  | 70.26 \n",
-      "  15    |   0.047386   | 98.263374  | 0.145770 | 95.59  | 70.08 \n",
-      "  16    |   0.041867   | 98.530864  | 0.155224 | 95.00  | 70.74 \n",
-      "  17    |   0.040618   | 98.654321  | 0.161561 | 94.85  | 71.27 \n",
-      "  18    |   0.033838   | 98.860082  | 0.168415 | 94.89  | 71.67 \n",
-      "  19    |   0.027869   | 99.086420  | 0.173696 | 95.26  | 70.95 \n",
-      "  20    |   0.027949   | 99.094650  | 0.177323 | 94.67  | 71.21 \n",
+      "   1    |   0.262298   | 90.246914  | 0.224946 | 92.07  | 59.67 \n",
+      "   2    |   0.188094   | 93.185185  | 0.189742 | 93.56  | 60.14 \n",
+      "   3    |   0.153153   | 94.407407  | 0.154541 | 94.78  | 60.15 \n",
+      "   4    |   0.133288   | 95.111111  | 0.170141 | 93.56  | 59.55 \n",
+      "   5    |   0.126150   | 95.452675  | 0.138272 | 95.11  | 59.67 \n",
+      "   6    |   0.116995   | 95.617284  | 0.140217 | 95.00  | 59.79 \n",
+      "   7    |   0.111692   | 95.744856  | 0.136605 | 94.78  | 59.89 \n",
+      "   8    |   0.105734   | 96.082305  | 0.136776 | 95.19  | 59.53 \n",
+      "   9    |   0.103154   | 96.164609  | 0.139305 | 95.11  | 60.39 \n",
+      "  10    |   0.098116   | 96.333333  | 0.138423 | 95.04  | 60.36 \n",
+      "  11    |   0.093556   | 96.481481  | 0.146359 | 94.70  | 59.77 \n",
+      "  12    |   0.089656   | 96.596708  | 0.142375 | 95.04  | 60.21 \n",
+      "  13    |   0.086719   | 96.761317  | 0.146824 | 94.63  | 59.81 \n",
+      "  14    |   0.083648   | 96.831276  | 0.137850 | 94.96  | 59.38 \n",
+      "  15    |   0.079263   | 96.975309  | 0.131095 | 94.93  | 59.64 \n",
+      "  16    |   0.076172   | 97.111111  | 0.141962 | 94.74  | 59.77 \n",
+      "  17    |   0.073591   | 97.201646  | 0.143869 | 94.70  | 59.73 \n",
+      "  18    |   0.069905   | 97.333333  | 0.147094 | 94.52  | 60.21 \n",
+      "  19    |   0.068282   | 97.506173  | 0.142716 | 94.56  | 60.37 \n",
+      "  20    |   0.063144   | 97.662551  | 0.149689 | 94.63  | 60.02 \n",
       "\n",
       "\n",
-      "Training complete! Best accuracy: 95.63%.\n"
+      "Training complete! Best accuracy: 95.19%.\n"
      ]
     }
    ],
    "source": [
     "trainer.train(\n",
-    "    epochs=20,\n",
-    "    title='test3',\n",
+    "    epochs=epochs,\n",
+    "    title=title,\n",
     "    writer=writer,\n",
     "    train_dataloader=train_dataloader,\n",
     "    val_dataloader=val_dataloader,\n",
@@ -243,33 +274,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test loss:  0.14491649648795527\n",
+      "test acc:  95.16666666666667\n",
+      "saved precision and recall results to file!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1., 0., 1.,  ..., 1., 0., 0.], device='cuda:0'),\n",
+       " tensor([1., 0., 1.,  ..., 1., 0., 0.], device='cuda:0'))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tot_pred, tot_label = tester.test(test_dataloader=test_dataloader,\n",
-    "                                  device=device, \n",
-    "                                  model=model)\n",
-    "\n",
-    "results = metrics.classification_report(tot_label.cpu(), tot_pred.cpu(), output_dict=True)\n",
-    "results_df = pd.DataFrame.from_dict(results).transpose()\n",
-    "results_df.to_excel('../result/test3.xlsx', sheet_name='sheet1')"
+    "tester.test(test_dataloader=test_dataloader,\n",
+    "            device=device, \n",
+    "            model=model,\n",
+    "            title=title)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uploaded model graph to tensorboard!\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu.graphModel(train_dataloader, model, writer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Again, grab a single mini-batch of images\n",
-    "dataiter = iter(train_dataloader)\n",
-    "first, second, labels = dataiter.next()\n",
-    "\n",
-    "# add_graph() will trace the sample input through your model,\n",
-    "# and render it as a graph.\n",
-    "writer.add_graph(model.cpu(), (first, second))\n",
-    "writer.flush()"
+    "mu.saveModel(title, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = mu.getModel(title)"
    ]
   },
   {
@@ -282,7 +350,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -296,12 +364,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "397704579725e15f5c7cb49fe5f0341eb7531c82d19f2c29d197e8b64ab5776b"
+    "hash": "348b9cd948ce87438be2e622031b2ecfa29bc2d3ecc0fd03127b9a24b30227df"
    }
   }
  },
