--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,13 @@
     "import trainer\n",
     "import initializer as init\n",
     "import tester\n",
-    "import model_util as mu"
+    "import model_util as mu\n",
+    "# import predictor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,17 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 27 / 132 pretrained vectors found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pretrained_word2vec = pm.load_pretrained_model(ch2idx)\n",
     "pretrained_word2vec = torch.tensor(pretrained_word2vec)"
@@ -82,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,18 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 1 GPU(s) available.\n",
-      "Device name: NVIDIA GeForce RTX 3070\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PyTorch TensorBoard support\n",
     "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
@@ -144,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +136,12 @@
     "# set parameters here\n",
     "# ====================\n",
     "\n",
-    "title = 'test5'\n",
-    "epochs = 20\n",
+    "title = 'test6'\n",
+    "epochs = 40\n",
     "\n",
     "vocab_size=len(ch2idx)\n",
     "embed_dim = 200\n",
-    "hidden_size = 50\n",
+    "hidden_size = 100\n",
     "num_classes = 2\n",
     "rnn_layers = 1\n",
     "dropout = 0.0\n",
@@ -173,30 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "doing with pretrained model!!!\n",
-      "OCR(\n",
-      "  (emb): Embedding(132, 200)\n",
-      "  (lstm1): RNN(\n",
-      "    (rnn): LSTM(200, 50, batch_first=True, bidirectional=True)\n",
-      "  )\n",
-      "  (lstm2): RNN(\n",
-      "    (rnn): LSTM(200, 50, batch_first=True, bidirectional=True)\n",
-      "  )\n",
-      "  (fc1): Linear(in_features=200, out_features=300, bias=True)\n",
-      "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
-      "  (dp1): Dropout(p=0.0, inplace=False)\n",
-      "  (dp2): Dropout(p=0.0, inplace=False)\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.set_seed(42)\n",
     "\n",
@@ -221,43 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start training...\n",
-      "\n",
-      " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
-      "--------------------------------------------------------------------------------\n",
-      "   1    |   0.262298   | 90.246914  | 0.224946 | 92.07  | 59.67 \n",
-      "   2    |   0.188094   | 93.185185  | 0.189742 | 93.56  | 60.14 \n",
-      "   3    |   0.153153   | 94.407407  | 0.154541 | 94.78  | 60.15 \n",
-      "   4    |   0.133288   | 95.111111  | 0.170141 | 93.56  | 59.55 \n",
-      "   5    |   0.126150   | 95.452675  | 0.138272 | 95.11  | 59.67 \n",
-      "   6    |   0.116995   | 95.617284  | 0.140217 | 95.00  | 59.79 \n",
-      "   7    |   0.111692   | 95.744856  | 0.136605 | 94.78  | 59.89 \n",
-      "   8    |   0.105734   | 96.082305  | 0.136776 | 95.19  | 59.53 \n",
-      "   9    |   0.103154   | 96.164609  | 0.139305 | 95.11  | 60.39 \n",
-      "  10    |   0.098116   | 96.333333  | 0.138423 | 95.04  | 60.36 \n",
-      "  11    |   0.093556   | 96.481481  | 0.146359 | 94.70  | 59.77 \n",
-      "  12    |   0.089656   | 96.596708  | 0.142375 | 95.04  | 60.21 \n",
-      "  13    |   0.086719   | 96.761317  | 0.146824 | 94.63  | 59.81 \n",
-      "  14    |   0.083648   | 96.831276  | 0.137850 | 94.96  | 59.38 \n",
-      "  15    |   0.079263   | 96.975309  | 0.131095 | 94.93  | 59.64 \n",
-      "  16    |   0.076172   | 97.111111  | 0.141962 | 94.74  | 59.77 \n",
-      "  17    |   0.073591   | 97.201646  | 0.143869 | 94.70  | 59.73 \n",
-      "  18    |   0.069905   | 97.333333  | 0.147094 | 94.52  | 60.21 \n",
-      "  19    |   0.068282   | 97.506173  | 0.142716 | 94.56  | 60.37 \n",
-      "  20    |   0.063144   | 97.662551  | 0.149689 | 94.63  | 60.02 \n",
-      "\n",
-      "\n",
-      "Training complete! Best accuracy: 95.19%.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.train(\n",
     "    epochs=epochs,\n",
@@ -274,30 +203,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test loss:  0.14491649648795527\n",
-      "test acc:  95.16666666666667\n",
-      "saved precision and recall results to file!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([1., 0., 1.,  ..., 1., 0., 0.], device='cuda:0'),\n",
-       " tensor([1., 0., 1.,  ..., 1., 0., 0.], device='cuda:0'))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tester.test(test_dataloader=test_dataloader,\n",
     "            device=device, \n",
@@ -307,24 +215,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uploaded model graph to tensorboard!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mu.graphModel(train_dataloader, model, writer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,11 +233,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# model = mu.getModel(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import predictor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = mu.getModel('test5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first = '광지원초는 2005년부터 중국어 특성화학교로 지정돼 학생과 학부모 대상의 중국어 교육을 한다. 추격매수할 요인이 없어 추가강세 또한 조심스러울 수밖에'\n",
+    "# second = '없다고 진단했다'\n",
+    "\n",
+    "# predictor.predict(first, second, model)"
    ]
   },
   {
