--- a/src/prototype.ipynb
+++ b/src/prototype.ipynb
@@ -29,13 +29,13 @@
      "output_type": "stream",
      "text": [
       "successfully got ch2idx!\n",
-      "100.00% sure that the next line must be omitted.\n"
+      "0.07% that next line must be omitted.\n"
      ]
     }
    ],
    "source": [
-    "first = 'SK㈜와 SK이노베이션은 15일 “테라파워에 2억5000만달러(3270억원)를 투자하기로 했다”고 밝혔다 SK그룹은 지난해 6월 확대경영회의'\n",
-    "second = '이후 SMR 분야 투자를 검토하기 시작, 지난 5월 테라파워와 포괄적 사업협력을 위한 양해각서(MOU)를 체결했다'\n",
+    "first = 'SK㈜와 SK이노베이션은 15일 “테라파워에 2억5000만달러(3270억원)를 투자하기로 했다”고'\n",
+    "second = '밝혔다 SK그룹은 지난해 6월 확대경영회의 이후 SMR 분야 투자를 검토하기 시작, 지난 5월 테라파워와 포괄적 사업협력을 위한 양해각서(MOU)를 체결했다'\n",
     "\n",
     "predictor.predict(first, second, model)"
    ]
@@ -50,7 +50,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -64,12 +64,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "348b9cd948ce87438be2e622031b2ecfa29bc2d3ecc0fd03127b9a24b30227df"
+    "hash": "397704579725e15f5c7cb49fe5f0341eb7531c82d19f2c29d197e8b64ab5776b"
    }
   }
  },
